# bizzy

./: .fizzy-sync.yml.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  fizzy_sync.py  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_beads_reader.py  test_cli_logic.py  test_client.py  test_config.py  test_edge_cases.py  test_integration.py  test_mapper.py  test_sync_engine.py  test_sync_state.py
